--- a/PythonExecutor/PythonExecutor.csproj
+++ b/PythonExecutor/PythonExecutor.csproj
@@ -42,7 +42,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PythonCaller.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextGenerationCaller.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -50,6 +49,9 @@
       <Project>{e4bb6437-6d4b-4a2a-9760-06bee854d542}</Project>
       <Name>Configuration</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
