--- a/WebApiClient/WebApiClient.csproj
+++ b/WebApiClient/WebApiClient.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Arguments.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestRunner.cs" />
     <Compile Include="Response.cs" />
   </ItemGroup>
   <ItemGroup>
