--- a/WebApiClient/WebApiClient.csproj
+++ b/WebApiClient/WebApiClient.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{73AF7D86-0C45-45C4-912C-4A6426B73021}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <RootNamespace>WebApiClient</RootNamespace>
     <AssemblyName>WebApiClient</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -34,6 +34,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=6.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -75,9 +78,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Arguments.cs" />
-    <Compile Include="Program.cs" />
     <Compile Include="RequestRunner.cs" />
     <Compile Include="Response.cs" />
+    <Compile Include="TextGeneration.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -90,10 +93,6 @@
     <ProjectReference Include="..\Configuration\Configuration.csproj">
       <Project>{e4bb6437-6d4b-4a2a-9760-06bee854d542}</Project>
       <Name>Configuration</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TextEditor\TextEditor.csproj">
-      <Project>{e23ef2bc-dfd8-41a6-8b72-b84feb0a9be0}</Project>
-      <Name>TextEditor</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
